--- a/templates/list.html
+++ b/templates/list.html
@@ -14,7 +14,7 @@
                     {% if let Some(promo_img) = item.promo_img %}
                         src="{{ promo_img }}"
                     {% else %}
-                        src="/imgs/empty.jpg"
+                        src="/static/imgs/empty.png"
                     {% endif %}
 
                     {% if let Some(caption) = item.caption %}
