--- a/templates/meta.html
+++ b/templates/meta.html
@@ -3,4 +3,4 @@
 <meta name="referrer" content="noreferrer" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="/style.css" />
-<link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/static/imgs/favicon.ico">
