--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <nav class="site-nav">
     <div class="nav-container">
         <a href="/{{ site }}" class="logo">
-            <img src="/static/logo/logo-{{ site }}.png" alt="RFA Logo" title="Radio Free Asia - {{ site }}">
+            <img src="/static/imgs/logo-{{ site }}.png" alt="RFA Logo" title="Radio Free Asia - {{ site }}">
         </a>
         <div class="nav-links">
             <a href="/mandarin" {%if site == "mandarin" %} class="hide" {% endif %}>普通话</a>
