--- a/templates/article.html
+++ b/templates/article.html
@@ -1,20 +1,18 @@
-<!doctype html>
-<html>
-    <head>
-        {% include "meta.html" %}
-        <title>{{ item.headlines }} - RFA - {{ site }}</title>
-    </head>
+{% extends "layout.html" %}
 
-    <body>
-        {% include "nav.html" %}
+{%- block title -%}
+        <title>{{ item.headlines }} - RFA - {{ site }}</title>
+{%- endblock -%}
+
+{% block main %}
         <div class="news-article">
             <div class="article-header">
                 <h1 class="headline">{{ item.headlines }}</h1>
                 <div class="meta">
                     <span class="date">{{ item.display_date }}</span>
-                    {% if let Some(a) = author %}
+                    {%- if let Some(a) = author %}
                     <span class="author">{{ a }}</span>
-                    {% endif %}
+                    {%- endif %}
                     <span class="source"><a href="https://rfa.org{{ item.website_url }}">Source</a></span>
                 </div>
                 <div>
@@ -33,32 +31,31 @@
                     title="{{ caption }}"
                     {% endif %}
                 />
-                {% if let Some(caption) = item.caption %}
+                {% if let Some(caption) = item.caption -%}
                 <div class="caption">{{ caption }}</div>
-                {% endif %}
+                {%- endif %}
             </div>
             {% endif %}
 
             <div class="article-body">
-                {% for content in contents %}
-                    {% match content %}
-                        {% when crate::ContentType::Text with (text) %}
-                            <p class="paragraph">{{ text }}</p>
-                        {% when crate::ContentType::Header with (header) %}
-                            <h2 class="subhead">{{ header }}</h2>
-                        {% when crate::ContentType::Image with (url, caption) %}
-                            <figure class="article-img">
-                                <img src="{{ url }}" alt="{{ caption }}" loading="lazy" />
-                                <figcaption>{{ caption }}</figcaption>
-                            </figure>
-                        {% when crate::ContentType::Link with (content, url) %}
-                            <div>
-                                ↩ <a href="{{ url }}" target="_blank">{{ content }}</a>
-                            </div>
-                        {% when crate::ContentType::Other %}
-                    {% endmatch %}
-                {% endfor %}
+            {%- for content in contents %}
+                {%- match content %}
+                {%- when crate::ContentType::Text with (text) %}
+                <p class="paragraph">{{ text }}</p>
+                {%- when crate::ContentType::Header with (header) %}
+                <h2 class="subhead">{{ header }}</h2>
+                {%- when crate::ContentType::Image with (url, caption) %}
+                <figure class="article-img">
+                    <img src="{{ url }}" alt="{{ caption }}" loading="lazy" />
+                    <figcaption>{{ caption }}</figcaption>
+                </figure>
+                {%- when crate::ContentType::Link with (content, url) %}
+                <div>
+                    ↩ <a href="{{ url }}" target="_blank">{{ content }}</a>
+                </div>
+                {%- when crate::ContentType::Other %}
+                {%- endmatch %}
+            {%- endfor %}
             </div>
         </div>
-    </body>
-</html>
+{% endblock %}
