fix panic in debug mode

--- a/templates/article.html
+++ b/templates/article.html
@@ -13,7 +13,7 @@
                     {%- if let Some(a) = author %}
                     <span class="author">{{ a }}</span>
                     {%- endif %}
-                    <span class="source"><a href="https://rfa.org{{ item.website_url }}">Source</a></span>
+                    <span class="source"><a href="https://rfa.org{{ item.website_url }}" target="_blank">Source</a></span>
                 </div>
                 <div>
                     <a href="{{ item.section.0 }}" class="section-link">{{ item.section.1 }}</a>
