--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,6 +50,7 @@
                     <a href="/uyghur" {%if site == "uyghur" %} class="hide" {% endif %}>ئۇيغۇر</a>
                     <a href="/vietnamese" {%if site == "vietnamese" %} class="hide" {% endif %}>Tiếng Việt</a>
                     <a href="/english" {%if site == "english" %} class="hide" {% endif %}>English</a>
+                    <a href="https://whynot.radiosfreeasia.org/" >歪脑</a>
                 </div>
             </div>
         </nav>
